Add support for triggering message stubs from a served HTTP stub (referenced by ID) or an HTTP request pattern (allowing a match for an HTTP request that's not stubbed).